--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
+    "plotly.js": "^2.6.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-data-grid": "^7.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
